examples/pos/patternmatching/matching-guard.effekt
def guard(): Bool = false

def ex1(opt: Option[String]) = opt match {
  case _ and guard() and opt is Some(voo) => voo
  case _ => "world"
}


def main() = println(ex1(Some("hello")))