examples/neg/issue737.effekt
def getFirst(words: List[String]): String = words(0)

def main() = println(getFirst(["hello", "world"]))